fix(skills): element alignment, order by date descend and experience query

--- a/frontend/src/containers/skills/Skills.scss
+++ b/frontend/src/containers/skills/Skills.scss
@@ -120,6 +120,7 @@
   margin-right: 1rem;
 
   p {
+    width: 7ch;
     font-weight: 800;
     color: var(--secondary-color);
   }
